--- a/features/speculation-rules.yml.dist
+++ b/features/speculation-rules.yml.dist
@@ -4,8 +4,9 @@
 status:
   baseline: false
   support:
-    chrome: "136"
-    chrome_android: "136"
+    chrome: "109"
+    chrome_android: "109"
+    edge: "109"
 compat_features:
   # baseline: false
   # support:
@@ -22,6 +23,7 @@ compat_features:
   - api.Document.prerendering
   - api.Document.prerenderingchange_event
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "109"
