Pin speculation-rules to the script type (#3007)

--- a/features/speculation-rules.yml
+++ b/features/speculation-rules.yml
@@ -3,3 +3,5 @@ description: Speculation rules are hints to the browser to proactively download 
 spec:
   - https://wicg.github.io/nav-speculation/speculation-rules.html
   - https://wicg.github.io/nav-speculation/prerendering.html
+status:
+  compute_from: html.elements.script.type.speculationrules
