--- a/features/composed-ranges.yml.dist
+++ b/features/composed-ranges.yml.dist
@@ -4,6 +4,9 @@
 status:
   baseline: false
   support:
+    chrome: "137"
+    chrome_android: "137"
+    edge: "137"
     safari: "17"
     safari_ios: "17"
 compat_features:
