--- a/features/hidden-until-found.yml.dist
+++ b/features/hidden-until-found.yml.dist
@@ -7,6 +7,8 @@ status:
     chrome: "102"
     chrome_android: "102"
     edge: "102"
+    firefox: "139"
+    firefox_android: "139"
 compat_features:
   - api.Element.beforematch_event
   - html.global_attributes.hidden.until-found
