--- a/features/draft/spec/css-values-5.yml.dist
+++ b/features/draft/spec/css-values-5.yml.dist
@@ -3,6 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "137"
+    chrome_android: "137"
+    edge: "137"
 compat_features:
   - css.types.if
