--- a/features/media-queries.yml.dist
+++ b/features/media-queries.yml.dist
@@ -111,19 +111,6 @@ compat_features:
   #   safari_ios: "12"
   - css.at-rules.media.calc
 
-  # baseline: high
-  # baseline_low_date: 2021-04-26
-  # baseline_high_date: 2023-10-26
-  # support:
-  #   chrome: "87"
-  #   chrome_android: "87"
-  #   edge: "87"
-  #   firefox: "78"
-  #   firefox_android: "79"
-  #   safari: "14.1"
-  #   safari_ios: "14.5"
-  - css.types.ratio.number_value
-
   # baseline: low
   # baseline_low_date: 2023-03-27
   # support:
@@ -153,3 +140,9 @@ compat_features:
   #   firefox: "59"
   #   firefox_android: "59"
   - css.at-rules.media.media_query_values
+
+  # baseline: false
+  # support:
+  #   firefox: "78"
+  #   firefox_android: "79"
+  - css.types.ratio.number_value
