--- a/features/reading-flow.yml.dist
+++ b/features/reading-flow.yml.dist
@@ -3,7 +3,10 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "137"
+    chrome_android: "137"
+    edge: "137"
 compat_features:
   - css.properties.reading-flow
   - css.properties.reading-flow.flex-flow
