--- a/features/temporal.yml.dist
+++ b/features/temporal.yml.dist
@@ -5,6 +5,10 @@ status:
   baseline: false
   support: {}
 compat_features:
+  # baseline: false
+  # support:
+  #   firefox: "139"
+  #   firefox_android: "139"
   - javascript.builtins.Date.toTemporalInstant
   - javascript.builtins.Temporal
   - javascript.builtins.Temporal.Duration
@@ -92,7 +96,6 @@ compat_features:
   - javascript.builtins.Temporal.PlainDate.valueOf
   - javascript.builtins.Temporal.PlainDate.weekOfYear
   - javascript.builtins.Temporal.PlainDate.with
-  - javascript.builtins.Temporal.PlainDate.withCalendar
   - javascript.builtins.Temporal.PlainDate.year
   - javascript.builtins.Temporal.PlainDate.yearOfWeek
   - javascript.builtins.Temporal.PlainDateTime
@@ -133,7 +136,6 @@ compat_features:
   - javascript.builtins.Temporal.PlainDateTime.valueOf
   - javascript.builtins.Temporal.PlainDateTime.weekOfYear
   - javascript.builtins.Temporal.PlainDateTime.with
-  - javascript.builtins.Temporal.PlainDateTime.withCalendar
   - javascript.builtins.Temporal.PlainDateTime.withPlainTime
   - javascript.builtins.Temporal.PlainDateTime.year
   - javascript.builtins.Temporal.PlainDateTime.yearOfWeek
@@ -243,8 +245,14 @@ compat_features:
   - javascript.builtins.Temporal.ZonedDateTime.valueOf
   - javascript.builtins.Temporal.ZonedDateTime.weekOfYear
   - javascript.builtins.Temporal.ZonedDateTime.with
-  - javascript.builtins.Temporal.ZonedDateTime.withCalendar
   - javascript.builtins.Temporal.ZonedDateTime.withPlainTime
   - javascript.builtins.Temporal.ZonedDateTime.withTimeZone
   - javascript.builtins.Temporal.ZonedDateTime.year
   - javascript.builtins.Temporal.ZonedDateTime.yearOfWeek
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support: {}
+  - javascript.builtins.Temporal.PlainDate.withCalendar
+  - javascript.builtins.Temporal.PlainDateTime.withCalendar
+  - javascript.builtins.Temporal.ZonedDateTime.withCalendar
