--- a/features/webauthn.yml.dist
+++ b/features/webauthn.yml.dist
@@ -123,6 +123,18 @@ compat_features:
   - api.PublicKeyCredential.parseRequestOptionsFromJSON_static
   - api.PublicKeyCredential.toJSON
 
+  # baseline: low
+  # baseline_low_date: 2025-05-27
+  # support:
+  #   chrome: "113"
+  #   chrome_android: "113"
+  #   edge: "113"
+  #   firefox: "139"
+  #   firefox_android: "139"
+  #   safari: "17"
+  #   safari_ios: "17"
+  - api.CredentialsContainer.create.publicKey_option.extensions.largeBlob
+
   # baseline: false
   # support:
   #   chrome: "67"
@@ -136,12 +148,30 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "76"
+  #   chrome_android: "76"
+  #   edge: "79"
+  #   firefox: "139"
+  #   firefox_android: "139"
+  - api.CredentialsContainer.create.publicKey_option.extensions.credProtect
+
+  # baseline: false
+  # support:
   #   chrome: "84"
   #   chrome_android: "84"
   #   edge: "84"
   #   firefox: "118"
   #   firefox_android: "118"
   - html.elements.iframe.allow.publickey-credentials-get
+
+  # baseline: false
+  # support:
+  #   chrome: "89"
+  #   chrome_android: "108"
+  #   edge: "89"
+  #   firefox: "114"
+  #   firefox_android: "128"
+  - api.CredentialsContainer.create.publicKey_option.residentKey
 
   # baseline: false
   # support:
@@ -166,24 +196,9 @@ compat_features:
   #   chrome: "113"
   #   chrome_android: "113"
   #   edge: "113"
-  #   safari: "17"
-  #   safari_ios: "17"
-  - api.CredentialsContainer.create.publicKey_option.extensions.largeBlob
-
-  # baseline: false
-  # support:
-  #   chrome: "89"
-  #   chrome_android: "108"
-  #   edge: "89"
-  #   firefox: "114"
-  - api.CredentialsContainer.create.publicKey_option.residentKey
-
-  # baseline: false
-  # support:
-  #   chrome: "76"
-  #   chrome_android: "76"
-  #   edge: "79"
-  - api.CredentialsContainer.create.publicKey_option.extensions.credProtect
+  #   firefox: "139"
+  #   firefox_android: "139"
+  - api.CredentialsContainer.get.publicKey_option.extensions.largeBlob
 
   # baseline: false
   # support:
@@ -206,13 +221,6 @@ compat_features:
   #   chrome_android: "95"
   #   edge: "95"
   - api.CredentialsContainer.create.publicKey_option.extensions.payment
-
-  # baseline: false
-  # support:
-  #   chrome: "113"
-  #   chrome_android: "113"
-  #   edge: "113"
-  - api.CredentialsContainer.get.publicKey_option.extensions.largeBlob
 
   # baseline: false
   # support:
