Pin Temporal support to top-level object to fix #3018

--- a/features/temporal.yml
+++ b/features/temporal.yml
@@ -3,3 +3,5 @@ description: The `Temporal` API allows you to work with dates, times, time zones
 spec: https://tc39.es/proposal-temporal/
 group: javascript
 caniuse: temporal
+status:
+  compute_from: javascript.builtins.Temporal
