--- a/gh-pages/package.json
+++ b/gh-pages/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
     "markdown-it": "^14.1.0",
-    "markdown-it-anchor": "^9.1.0"
+    "markdown-it-anchor": "^9.1.0",
+    "baseline-browser-mapping": "file:../../baseline-browser-mapping"
   }
 }
