--- a/features/webgl.yml.dist
+++ b/features/webgl.yml.dist
@@ -229,6 +229,19 @@ compat_features:
   #   chrome: "33"
   #   chrome_android: "33"
   #   edge: "79"
+  #   firefox: "24"
+  #   firefox_android: "24"
+  #   safari: "8"
+  #   safari_ios: "8"
+  - api.HTMLCanvasElement.getContext.webgl_context
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "33"
+  #   chrome_android: "33"
+  #   edge: "79"
   #   firefox: "30"
   #   firefox_android: "30"
   #   safari: "10.1"
