--- a/features/webgl2.yml.dist
+++ b/features/webgl2.yml.dist
@@ -25,6 +25,7 @@ compat_features:
   #   firefox_android: "51"
   #   safari: "15"
   #   safari_ios: "15"
+  - api.HTMLCanvasElement.getContext.webgl2_context
   - api.HTMLCanvasElement.getContext.webgl2_context.options_alpha_parameter
   - api.HTMLCanvasElement.getContext.webgl2_context.options_failIfMajorPerformanceCaveat_parameter
 
