--- a/features/gap-decorations.yml
+++ b/features/gap-decorations.yml
@@ -1,6 +1,6 @@
 name: Gap decorations
 description: The `column-rule` and `row-rule` CSS properties display decorative lines between columns and rows of a flex, grid, or multi-column layout. The `rule-break`, `rule-outset`, and `rule-paint-order` properties control the appearance of these lines.
-spec: https://www.w3.org/TR/css-gaps-1/
+spec: https://drafts.csswg.org/css-gaps-1/
 group:
   - grid
   - flexbox
