Install b-b-m from remote repository

--- a/gh-pages/package.json
+++ b/gh-pages/package.json
@@ -17,8 +17,8 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "baseline-browser-mapping": "github:web-platform-dx/baseline-browser-mapping#web-loading",
     "markdown-it": "^14.1.0",
-    "markdown-it-anchor": "^9.1.0",
-    "baseline-browser-mapping": "file:../../baseline-browser-mapping"
+    "markdown-it-anchor": "^9.1.0"
   }
 }
