Regen dist files

--- a/features/canvas-2d.yml.dist
+++ b/features/canvas-2d.yml.dist
@@ -64,6 +64,7 @@ compat_features:
   - api.CanvasRenderingContext2D.strokeRect
   - api.CanvasRenderingContext2D.strokeStyle
   - api.CanvasRenderingContext2D.translate
+  - api.HTMLCanvasElement.getContext.2d_context
 
   # baseline: high
   # baseline_low_date: 2015-07-29
