--- a/features/digital-goods.yml.dist
+++ b/features/digital-goods.yml.dist
@@ -5,5 +5,6 @@ status:
   baseline: false
   support:
     chrome_android: "101"
+    edge: "134"
 compat_features:
   - api.Window.getDigitalGoodsService
