--- a/features/math-sum-precise.yml.dist
+++ b/features/math-sum-precise.yml.dist
@@ -6,5 +6,7 @@ status:
   support:
     firefox: "137"
     firefox_android: "137"
+    safari: "18.4"
+    safari_ios: "18.4"
 compat_features:
   - javascript.builtins.Math.sumPrecise
