--- a/features/font-kerning.yml
+++ b/features/font-kerning.yml
@@ -1,5 +1,5 @@
 name: font-kerning
-description: The `font-kerning` CSS property sets whether kerning data from a font is used to adjust the space between letters.
+description: The `font-kerning` CSS property sets whether to use kerning data from a font to adjust the space between letters.
 spec: https://drafts.csswg.org/css-fonts-4/#font-kerning-prop
 group: font-features
 caniuse: font-kerning
