--- a/features/idle-detection.yml
+++ b/features/idle-detection.yml
@@ -1,3 +1,3 @@
 name: Idle detection
-description: The `IdleDetector` API is used to notify a webpage of the user's idle, active, and locked state.
+description: The `IdleDetector` API notifies a webpage of the user's idle, active, and locked state.
 spec: https://wicg.github.io/idle-detection/
