--- a/features/form-associated-custom-elements.yml
+++ b/features/form-associated-custom-elements.yml
@@ -1,5 +1,5 @@
 name: Form-associated custom elements
-description: Custom elements may act like built-in form elements, via the the `attachInternals()` method of `HTMLElement` and the `ElementInternals` API.
+description: Custom elements may act like built-in form elements, via the `attachInternals()` method of `HTMLElement` and the `ElementInternals` API.
 spec: https://html.spec.whatwg.org/multipage/custom-elements.html#form-associated-custom-elements
 group:
   - custom-elements
