--- a/features/ins.yml
+++ b/features/ins.yml
@@ -1,5 +1,5 @@
 name: <ins>
-description: The `<ins>` element element represents a range of text that has been inserted into a document, styling text as underlined by default.
+description: The `<ins>` element represents a range of text that has been inserted into a document, styling text as underlined by default.
 spec: https://html.spec.whatwg.org/multipage/edits.html#the-ins-element
 group: html-elements
 # TODO - Removed until #1173 is resolved, these APIs are currently listed
