--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=20.10.0"
   },
   "scripts": {
+    "audit-consumers": "tsx scripts/audit-consumers.ts",
     "build:extended": "tsx scripts/build.ts extended-json",
     "build": "tsx scripts/build.ts package",
     "dist": "tsx scripts/dist.ts",
@@ -40,10 +41,12 @@
     "@eslint/js": "^9.30.0",
     "@js-temporal/polyfill": "^0.5.1",
     "@mdn/browser-compat-data": "^6.0.26",
+    "@octokit/rest": "^22.0.0",
     "@types/caniuse-lite": "^1.0.4",
     "@types/node": "^20.19.1",
     "ajv": "^8.17.1",
     "caniuse-lite": "^1.0.30001726",
+    "cheerio": "^1.1.0",
     "diff": "^8.0.2",
     "eslint-plugin-new-with-error": "^5.0.0",
     "fast-json-stable-stringify": "^2.1.0",
