--- a/features/csp.yml.dist
+++ b/features/csp.yml.dist
@@ -310,8 +310,9 @@ compat_features:
   #   safari_ios: "16"
   - http.headers.Content-Security-Policy.script-src.wasm-unsafe-eval
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-12-13
+  # baseline_high_date: 2025-06-13
   # support:
   #   chrome: "75"
   #   chrome_android: "75"
