--- a/features/calc-constants.yml.dist
+++ b/features/calc-constants.yml.dist
@@ -13,8 +13,9 @@ status:
     safari: "16"
     safari_ios: "16"
 compat_features:
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-12-13
+  # baseline_high_date: 2025-06-13
   # support:
   #   chrome: "99"
   #   chrome_android: "99"
