--- a/features/compute-pressure.yml.dist
+++ b/features/compute-pressure.yml.dist
@@ -21,4 +21,5 @@ compat_features:
   - api.PressureRecord.time
   - api.PressureRecord.toJSON
   - html.elements.iframe.allow.compute-pressure
+  - http.headers.Feature-Policy.compute-pressure
   - http.headers.Permissions-Policy.compute-pressure
