--- a/features/draft/spec/html.yml.dist
+++ b/features/draft/spec/html.yml.dist
@@ -577,8 +577,9 @@ compat_features:
   #   safari_ios: "15.4"
   - api.reportError
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-12-13
+  # baseline_high_date: 2025-06-13
   # support:
   #   chrome: "90"
   #   chrome_android: "90"
