--- a/features/fetchlater.yml.dist
+++ b/features/fetchlater.yml.dist
@@ -11,5 +11,7 @@ compat_features:
   - api.FetchLaterResult
   - api.FetchLaterResult.activated
   - api.Window.fetchLater
+  - http.headers.Feature-Policy.deferred-fetch
+  - http.headers.Feature-Policy.deferred-fetch-minimal
   - http.headers.Permissions-Policy.deferred-fetch
   - http.headers.Permissions-Policy.deferred-fetch-minimal
