--- a/features/flexbox.yml.dist
+++ b/features/flexbox.yml.dist
@@ -336,8 +336,9 @@ compat_features:
   #   safari_ios: "16"
   - css.properties.flex-basis.fit-content
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-12-13
+  # baseline_high_date: 2025-06-13
   # support:
   #   chrome: "108"
   #   chrome_android: "108"
