--- a/features/screen-wake-lock.yml.dist
+++ b/features/screen-wake-lock.yml.dist
@@ -67,6 +67,13 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "84"
+  #   chrome_android: "84"
+  #   edge: "84"
+  - http.headers.Feature-Policy.screen-wake-lock
+
+  # baseline: false
+  # support:
   #   chrome: "88"
   #   chrome_android: "88"
   #   edge: "88"
