--- a/features/text-emphasis.yml.dist
+++ b/features/text-emphasis.yml.dist
@@ -52,8 +52,9 @@ compat_features:
   - css.properties.text-emphasis-position.left
   - css.properties.text-emphasis-position.right
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-12-13
+  # baseline_high_date: 2025-06-13
   # support:
   #   chrome: "99"
   #   chrome_android: "99"
