Drop Feature-Policy keys from non-deprecated features

--- a/features/serial.yml
+++ b/features/serial.yml
@@ -3,3 +3,28 @@ description: The `navigator.serial` API communicates with devices over serial po
 spec: https://wicg.github.io/serial/
 status:
   compute_from: api.Navigator.serial
+compat_features:
+  - api.Navigator.serial
+  - api.Serial
+  - api.Serial.getPorts
+  - api.Serial.requestPort
+  - api.Serial.requestPort.allowedBluetoothServiceClassIds_option
+  - api.Serial.requestPort.filters_bluetoothServiceClassId
+  - api.SerialPort
+  - api.SerialPort.close
+  - api.SerialPort.connect_event
+  - api.SerialPort.connect_event.bluetooth_rfcomm
+  - api.SerialPort.connected
+  - api.SerialPort.disconnect_event
+  - api.SerialPort.disconnect_event.bluetooth_rfcomm
+  - api.SerialPort.forget
+  - api.SerialPort.getInfo
+  - api.SerialPort.getInfo.bluetoothServiceClassId
+  - api.SerialPort.getSignals
+  - api.SerialPort.open
+  - api.SerialPort.readable
+  - api.SerialPort.setSignals
+  - api.SerialPort.writable
+  - api.WorkerNavigator.serial
+  - html.elements.iframe.allow.serial
+  - http.headers.Permissions-Policy.serial
