--- a/features/compute-pressure.yml
+++ b/features/compute-pressure.yml
@@ -2,3 +2,19 @@ name: CPU compute pressure
 description: The `PressureObserver` API monitors CPU load, allowing you to adjust workloads in response to available computing resources. Also known as the Compute Pressure API.
 spec: https://w3c.github.io/compute-pressure/
 group: compute-pressure
+compat_features:
+  - api.Permissions.permission_compute-pressure
+  - api.PressureObserver
+  - api.PressureObserver.PressureObserver
+  - api.PressureObserver.disconnect
+  - api.PressureObserver.knownSources_static
+  - api.PressureObserver.observe
+  - api.PressureObserver.takeRecords
+  - api.PressureObserver.unobserve
+  - api.PressureRecord
+  - api.PressureRecord.source
+  - api.PressureRecord.state
+  - api.PressureRecord.time
+  - api.PressureRecord.toJSON
+  - html.elements.iframe.allow.compute-pressure
+  - http.headers.Permissions-Policy.compute-pressure
