--- a/features/class-syntax.yml
+++ b/features/class-syntax.yml
@@ -17,7 +17,7 @@ compat_features:
   - javascript.classes.private_class_fields_in
   - javascript.classes.private_class_methods
   - javascript.classes.public_class_fields
-  - javascript.classes.static_class_fields
-  - javascript.classes.static_initialization_blocks
+  - javascript.classes.static.class_fields
+  - javascript.classes.static.initialization_blocks
   - javascript.operators.class
   - javascript.operators.new_target
