--- a/features/class-syntax.yml.dist
+++ b/features/class-syntax.yml.dist
@@ -82,7 +82,7 @@ compat_features:
   #   firefox_android: "79"
   #   safari: "14.1"
   #   safari_ios: "14.5"
-  - javascript.classes.static_class_fields
+  - javascript.classes.static.class_fields
 
   # baseline: high
   # baseline_low_date: 2021-07-13
@@ -146,4 +146,4 @@ compat_features:
   #   firefox_android: "93"
   #   safari: "16.4"
   #   safari_ios: "16.4"
-  - javascript.classes.static_initialization_blocks
+  - javascript.classes.static.initialization_blocks
