--- a/features/font-style.yml.dist
+++ b/features/font-style.yml.dist
@@ -44,15 +44,8 @@ compat_features:
   #   safari_ios: "2"
   - css.at-rules.font-face.font-style
 
-  # baseline: high
-  # baseline_low_date: 2020-01-15
-  # baseline_high_date: 2022-07-15
+  # baseline: false
   # support:
-  #   chrome: "62"
-  #   chrome_android: "62"
-  #   edge: "79"
   #   firefox: "61"
   #   firefox_android: "61"
-  #   safari: "11.1"
-  #   safari_ios: "11.3"
   - css.properties.font-style.oblique-angle
