Pin fetch priority

--- a/features/fetch-priority.yml
+++ b/features/fetch-priority.yml
@@ -3,3 +3,5 @@ description: The `fetch()` `priority` option and the `fetchpriority` HTML attrib
 spec:
   - https://fetch.spec.whatwg.org/#request-priority
   - https://html.spec.whatwg.org/multipage/urls-and-fetching.html#fetch-priority-attributes
+status:
+  compute_from: http.headers.Link.fetchpriority
