--- a/features/draft/spec/translation-api.yml.dist
+++ b/features/draft/spec/translation-api.yml.dist
@@ -3,7 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "138"
 compat_features:
   - api.LanguageDetector
   - api.LanguageDetector.availability_static
