--- a/features/pointer-events-api.yml.dist
+++ b/features/pointer-events-api.yml.dist
@@ -178,6 +178,8 @@ compat_features:
   #   chrome: "77"
   #   chrome_android: "77"
   #   edge: "79"
+  #   firefox: "140"
+  #   firefox_android: "140"
   - api.Element.pointerrawupdate_event
 
   # baseline: false
