--- a/features/stretch.yml.dist
+++ b/features/stretch.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "138"
+    chrome_android: "138"
 compat_features:
   - css.properties.height.stretch
   - css.properties.max-height.stretch
