--- a/features/abs-sign.yml.dist
+++ b/features/abs-sign.yml.dist
@@ -9,5 +9,21 @@ status:
     safari: "15.4"
     safari_ios: "15.4"
 compat_features:
+  # baseline: false
+  # support:
+  #   chrome: "138"
+  #   chrome_android: "138"
+  #   firefox: "118"
+  #   firefox_android: "118"
+  #   safari: "15.4"
+  #   safari_ios: "15.4"
   - css.types.abs
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   firefox: "118"
+  #   firefox_android: "118"
+  #   safari: "15.4"
+  #   safari_ios: "15.4"
   - css.types.sign
