--- a/features/draft/spec/css-viewport-1.yml.dist
+++ b/features/draft/spec/css-viewport-1.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "138"
+    chrome_android: "138"
 compat_features:
   - api.Viewport
   - api.Viewport.segments
