--- a/features/draft/spec/html.yml.dist
+++ b/features/draft/spec/html.yml.dist
@@ -909,11 +909,16 @@ compat_features:
   #   edge: "135"
   - api.NavigateEvent.sourceElement
 
+  # baseline: false
+  # support:
+  #   firefox: "140"
+  #   firefox_android: "140"
+  - html.elements.h1.no_ua_styles_in_article_aside_nav_section
+
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support: {}
   - api.HTMLButtonElement.command.request-close
   - api.Navigator.authentication
-  - html.elements.h1.no_ua_styles_in_article_aside_nav_section
   - html.elements.hr.hr_in_select
   - html.elements.track.kind.descriptions
