--- a/features/draft/spec/sri-2.yml.dist
+++ b/features/draft/spec/sri-2.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "138"
+    chrome_android: "138"
 compat_features:
   - http.headers.Integrity-Policy
   - http.headers.Integrity-Policy-Report-Only
