--- a/features/partitioned-cookies.yml.dist
+++ b/features/partitioned-cookies.yml.dist
@@ -18,13 +18,21 @@ compat_features:
   - api.ExtendableCookieChangeEvent.changed.partitioned_property
   - api.ExtendableCookieChangeEvent.deleted.partitioned_property
 
+  # baseline: false
+  # support:
+  #   chrome: "114"
+  #   chrome_android: "114"
+  #   edge: "114"
+  #   firefox: "140"
+  #   firefox_android: "140"
+  - api.CookieStore.delete.partitioned_option
+  - api.CookieStore.set.partitioned_option
+
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "114"
   #   chrome_android: "114"
   #   edge: "114"
-  - api.CookieStore.delete.partitioned_option
   - api.CookieStore.get.partitioned_return_property
-  - api.CookieStore.set.partitioned_option
   - http.headers.Set-Cookie.Partitioned
