--- a/features/summarizer.yml.dist
+++ b/features/summarizer.yml.dist
@@ -3,7 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "138"
 compat_features:
   - api.Summarizer
   - api.Summarizer.availability_static
