--- a/features/web-audio.yml.dist
+++ b/features/web-audio.yml.dist
@@ -54,7 +54,6 @@ compat_features:
   - api.AudioParam
   - api.AudioParam.cancelScheduledValues
   - api.AudioParam.defaultValue
-  - api.AudioParam.setTargetAtTime
   - api.AudioParam.setValueAtTime
   - api.AudioParam.setValueCurveAtTime
   - api.AudioParam.value
@@ -153,6 +152,19 @@ compat_features:
   - api.OscillatorNode.detune
   - api.OscillatorNode.frequency
   - api.OscillatorNode.type
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "24"
+  #   chrome_android: "25"
+  #   edge: "12"
+  #   firefox: "25"
+  #   firefox_android: "25"
+  #   safari: "6"
+  #   safari_ios: "6"
+  - api.AudioParam.setTargetAtTime
 
   # baseline: high
   # baseline_low_date: 2015-07-29
