Drop tsup and export our types directly

--- a/packages/web-features/tsconfig.json
+++ b/packages/web-features/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2016",
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "typeRoots": ["./node_modules/@types"]
+    "typeRoots": ["./node_modules/@types"],
+    "declaration": true
   }
 }
