--- a/packages/web-features/package.json
+++ b/packages/web-features/package.json
@@ -18,16 +18,17 @@
   "types": "./index.d.ts",
   "files": [
     "index.d.ts",
+    "types.d.ts",
+    "types.quicktype.d.ts",
     "index.js",
     "data.json",
     "data.schema.json"
   ],
   "scripts": {
-    "prepare": "tsc && rm types.js && tsup ./index.ts --dts-only --format=esm --out-dir=."
+    "prepare": "tsc && rm types.js && rm types.quicktype.js"
   },
   "devDependencies": {
     "@types/node": "^24.0.7",
-    "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   }
 }
