--- a/features/abs-sign.yml.dist
+++ b/features/abs-sign.yml.dist
@@ -9,10 +9,12 @@ status:
     safari: "15.4"
     safari_ios: "15.4"
 compat_features:
-  # baseline: false
+  # baseline: low
+  # baseline_low_date: 2025-06-26
   # support:
   #   chrome: "138"
   #   chrome_android: "138"
+  #   edge: "138"
   #   firefox: "118"
   #   firefox_android: "118"
   #   safari: "15.4"
