--- a/features/draft/spec/css-viewport-1.yml.dist
+++ b/features/draft/spec/css-viewport-1.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "138"
     chrome_android: "138"
+    edge: "138"
 compat_features:
   - api.Viewport
   - api.Viewport.segments
