--- a/features/webcodecs.yml.dist
+++ b/features/webcodecs.yml.dist
@@ -224,5 +224,6 @@ compat_features:
   # support:
   #   chrome: "138"
   #   chrome_android: "138"
+  #   edge: "138"
   - api.VideoFrame.flip
   - api.VideoFrame.rotation
