--- a/features/blocking-render.yml.dist
+++ b/features/blocking-render.yml.dist
@@ -3,10 +3,7 @@
 
 status:
   baseline: false
-  support:
-    chrome: "105"
-    chrome_android: "105"
-    edge: "105"
+  support: {}
 compat_features:
   # baseline: false
   # support:
@@ -24,8 +21,5 @@ compat_features:
 
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
-  # support:
-  #   chrome: "105"
-  #   chrome_android: "105"
-  #   edge: "105"
+  # support: {}
   - http.headers.Link.blocking
