--- a/features/draft/spec/css-values-5.yml.dist
+++ b/features/draft/spec/css-values-5.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "138"
     chrome_android: "138"
+    edge: "138"
 compat_features:
   # baseline: false
   # support:
@@ -19,5 +20,6 @@ compat_features:
   # support:
   #   chrome: "138"
   #   chrome_android: "138"
+  #   edge: "138"
   - css.types.sibling-count
   - css.types.sibling-index
