--- a/features/draft/spec/prefetch.yml.dist
+++ b/features/draft/spec/prefetch.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "138"
     chrome_android: "138"
+    edge: "138"
 compat_features:
   - http.headers.Clear-Site-Data.prefetchCache
   - http.headers.Clear-Site-Data.prerenderCache
