--- a/features/draft/spec/sri-2.yml.dist
+++ b/features/draft/spec/sri-2.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "138"
     chrome_android: "138"
+    edge: "138"
 compat_features:
   - http.headers.Integrity-Policy
   - http.headers.Integrity-Policy-Report-Only
