--- a/features/line-clamp.yml.dist
+++ b/features/line-clamp.yml.dist
@@ -3,9 +3,7 @@
 
 status:
   baseline: false
-  support:
-    safari: "18.2"
-    safari_ios: "18.2"
+  support: {}
 compat_features:
   - css.properties.line-clamp
   - css.properties.line-clamp.none
