File issue with report on consumer usage of IDs

--- a/.github/workflows/audit_consumers.yml
+++ b/.github/workflows/audit_consumers.yml
@@ -18,4 +18,9 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npm run build
-      - run: npm run audit-consumers
+      - run: npm run audit-consumers | tee issue-body.md
+      - uses: peter-evans/create-issue-from-file@v5
+        with:
+          title: Automated report on web-features consumers
+          content-filepath: issue-body.md
+          labels: generated
